<?xml version="1.0"?>
<package format="2">
  <name>darko_causal_discovery_msgs</name>
  <version>0.0.1</version>
  <description>Causal Model message definition of the EU H2020 project DARKO</description>

  <maintainer email="info@darko-project.eu">DARKO project consortium</maintainer>

  <author email="lcastri@lincoln.ac.uk">Luca Castri</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
