<?xml version="1.0"?>
<package format="2">
  <name>darko_risk_map_msgs</name>
  <version>0.0.1</version>
  <description>Risk-Map-related message definitions of the EU H2020 project DARKO</description>

  <maintainer email="info@darko-project.eu">DARKO project consortium</maintainer>

  <author email="elisa.stefanini@phd.unipi.it">Elisa Stefanini</author>
  <author email="olga.napolitano@phd.unipi.it">Olga Napolitano</author>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>



  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

</package>
