<?xml version="1.0"?>
<package format="2">
  <name>darko_message_visualization</name>
  <version>0.0.1</version>
  <description>Scripts for ROS message visualization of the EU H2020 project DARKO</description>

  <maintainer email="info@darko-project.eu">DARKO project consortium</maintainer>

  <author email="shih-min.yang@oru.se">Shih-Min Yang</author>
  <author email="narunas.vaskevicius@de.bosch.com">Narunas Vaskevicius</author>
  <author email="timm.linder@de.bosch.com">Timm Linder</author>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>darko_perception_msgs</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>rospy</depend>

</package>
